tooling/nargo_cli/tests/snapshots/compile_failure/comptime_parse_all_tokens/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected an identifier, `crate`, `dep` or `super` but found '(type)'
  ┌─ src/main.nr:1:1
  │
1 │ #[foo]
  │ ------ Failed to parse macro's token stream into top-level item
  ·
8 │     quote { use $t; }
  │     -----------------
  │
  = The resulting token stream was: (stream starts on next line)
      use Field;
  = To avoid this error in the future, try adding input validation to your macro. Erroring out early with an `assert` can be a good way to provide a user-friendly error message

Aborting due to 1 previous error
